# testing-cookiecutter-django

./: pyproject.toml
cook_django/: .gitignore  .gitlab-ci.yml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
cook_django/.devcontainer/: devcontainer.json
cook_django/.envs/.local/: .postgres
cook_django/compose/production/traefik/: traefik.yml
cook_django/config/: api_router.py  urls.py  wsgi.py
cook_django/config/settings/: base.py  local.py  production.py  test.py
cook_django/cook_django/: conftest.py
cook_django/cook_django/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
cook_django/cook_django/templates/: base.html
cook_django/cook_django/users/: adapters.py  apps.py  models.py  views.py
cook_django/cook_django/users/api/: serializers.py  views.py
cook_django/cook_django/users/migrations/: 0001_initial.py
cook_django/cook_django/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
cook_django/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
cook_django/locale/en_US/LC_MESSAGES/: django.po
cook_django/locale/fr_FR/LC_MESSAGES/: django.po
cook_django/locale/pt_BR/LC_MESSAGES/: django.po
